v0.11.0

* [BGBUILD-332] Add support for bash completion

v0.10.0

* [BGBUILD-313] boxgrinder build fails to build ec2 image if ec2-user already exists
* [BGBUILD-318] Add support for us-west-2 region
* [BGBUILD-308] Clearer error message when unrecognised file extension is used
* [BGBUILD-322] Allow selection of kernel and ramdisk for ec2 and ebs plugins
* [BGBUILD-302] Add support for VirtualPC platform
* [BGBUILD-195] Add support for OpenStack
* [BGBUILD-304] Standarize plugin callbacks
* [BGBUILD-325] Remove kickstart support
* [BGBUILD-323] Invalid kernel version recognition makes recreating initrd impossible
* [BGBUILD-326] Ensure building from root directory is successful
* [BGBUILD-211] Support for registering appliances with libvirt
* [BGBUILD-331] Add support for sa-east-1 EC2 region

v0.9.8

* [BGBUILD-312] Only use root privileges when necessary
* [BGBUILD-267] Add CentOS 6 support
* [BGBUILD-310] BoxGrinder doesn't build appliances when Fedora 16 is the host
* [BGBUILD-157] Add Alignment options for virtual appliances
* [BGBUILD-321] For EBS AMIs use the filesystem type specified for root partition

v0.9.7

* [BGBUILD-307] Appliance with swap file fails to build if selected OS is centos
* [BGBUILD-306] Switch for updates-testing repository for integration tests

v0.9.6

* [BGBUILD-298] Fedora 16 or newer has networking issue on platforms different than EC2 because of biosdevname not disabled
* [BGBUILD-299] Wrong filenames in GRUB discovery
* [BGBUILD-276] Import files into appliance via appliance definition file (Files section)
* [BGBUILD-300] Add support for swap partitions
* [BGBUILD-301] Swap feature not working properly

v0.9.5.3

* What a shame, fixing the mocks again...

v0.9.5.2

* More mocking in specs preventing remote calls - now for real

v0.9.5.1

* More mocking in specs preventing remote calls

v0.9.5

* [BGBUILD-294] Package aws-sdk 1.1.1 and update dependency