@@ -1,6 +1,7 @@
 v0.11.0
 
 * [BGBUILD-332] Add support for bash completion
+* [BGBUILD-338] Weed out non-deterministic tests
 
 v0.10.0
 
